<resources>
    <string name="app_name">Desafio02-DH</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="or">OR</string>
    <string name="nome">Nome</string>
    <string name="repeatPass">Repeat password</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="fechamento">"Fecha às "</string>
    <string name="digital_house_foods">Digital House Foods</string>
    <string name="registermin">Register</string>
</resources>