<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.view.LoginFragment"
    android:layout_marginTop="35dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail_fLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="@color/colorCinzaHint"
            app:boxStrokeColor="@color/colorBotaoVermelho">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorCinzaHint"
                android:inputType="textEmailAddress"
                app:boxStrokeColor="@color/colorBotaoVermelho"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword_fLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextColor="@color/colorCinzaHint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorCinzaHint"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin_fLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/colorCorBranca"
            android:backgroundTint="@color/colorBotaoVermelho"
            android:text="@string/login"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <View
                android:layout_width="10dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorCinzaTraco"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"/>

            <View
                android:layout_width="10dp"
                android:layout_height="1dp"
                android:background="@color/colorCinzaTraco"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp">

            <Button
                android:id="@+id/btnRegister_fLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/colorCorBranca"
                android:backgroundTint="@color/colorBotaoCinza"
                android:text="@string/register"
                android:layout_gravity="center"/>
        </LinearLayout>


    </LinearLayout>

</FrameLayout>