<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistroFragment"
    android:layout_marginTop="25dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            app:hintTextColor="@color/colorCinzaHint"
            app:boxStrokeColor="@color/colorBotaoVermelho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNome_fRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorCinzaHint"
                android:inputType="text"
                app:boxStrokeColor="@color/colorBotaoVermelho"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="@color/colorCinzaHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail_fRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorCinzaHint"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextColor="@color/colorCinzaHint"
            app:boxStrokeColor="@color/colorBotaoVermelho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword_fRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorCinzaHint"
                android:inputType="textPassword"
                app:boxStrokeColor="@color/colorBotaoVermelho"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeatPass"
            app:hintTextColor="@color/colorCinzaHint"
            app:boxStrokeColor="@color/colorBotaoVermelho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtRepeatPassword_fRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorCinzaHint"
                android:inputType="textEmailAddress"
                app:boxStrokeColor="@color/colorBotaoVermelho"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button
                android:id="@+id/btnLogin_fRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/colorCorBranca"
                android:backgroundTint="@color/colorBotaoVermelho"
                android:text="@string/register"
                android:layout_marginTop="30dp"
                android:layout_gravity="bottom"/>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>